--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Xymatic Task Front End</title>
+    <link rel="shortcut icon" href="/static/favicon.ico" />
+    <link rel="icon" href="/static/favicon.ico" />
   </head>
   <body>
-   
     <div id="root"></div>
   </body>
 </html>
