--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="theme-color" content="#0c0c0c" />
+    <base href="/" />
     <!-- <meta name="description" > -->
     <title>Xymatic Task Front End</title>
     <link rel="shortcut icon" href="/static/favicon.ico" />
