feat(redux): added some factories

--- a/static/index.html
+++ b/static/index.html
@@ -14,5 +14,5 @@
   <body>
     <div id="root"></div>
   </body>
-  <script type="text/javscript" src="serviceWorker.js"></script>
+  <script type="javascript/worker" src="serviceWorker.js"></script>
 </html>
